<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gehaltsuhr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonStart">Start</string>
    <string name="zeroEuros">0,00 €</string>
    <string name="buttonReset">Zurücksetzen</string>
    <string name="intervalDescr">Benachrichtigung:</string>
    <string name="hourlyRateDescr">Stundenlohn:</string>

</resources>
