<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.rollinrob.gehaltsuhr.MainActivity" >

    <TextView
        android:id="@+id/textViewCurrentPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/zeroEuros"
        android:textSize="40dp" />

    <Button
        android:id="@+id/buttonStartStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCurrentPay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:minWidth="150dp"
        android:text="@string/buttonStart" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonStartStop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:minWidth="150dp"
        android:text="@string/buttonReset" />

    <LinearLayout
        android:id="@+id/linearLayoutNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewIntervallDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intervalDescr" />

        <Spinner
            android:id="@+id/spinnerNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHourlyRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayoutNotifications"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewHourlyRateDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourlyRateDescr" />

        <EditText
            android:id="@+id/editTextHourlyRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

    </LinearLayout>

</RelativeLayout>